# jarvis

./: .gitignore  Cargo.toml  post_build.py
__other/jarvis_voices/: bandicam 2023-04-29 18-51-58-753.pkf  Запис.pkf
__other/jarvis_voices/processed/: Short_01.pkf
crates/jarvis-app/: Cargo.toml
crates/jarvis-app/src/: app.rs  main.rs  tray.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: config.rs  ipc.rs  lib.rs
crates/jarvis-core/src/i18n/locales/: en.ftl  ru.ftl  ua.ftl
crates/jarvis-core/src/ipc/: events.rs  server.rs
crates/jarvis-gui/: Cargo.toml  tauri.conf.json
crates/jarvis-gui/capabilities/: default.json
crates/jarvis-gui/src/: main.rs
frontend/: package-lock.json  package.json  vite.config.ts.timestamp-1711207419444-374f66d7ecbaf.mjs
frontend/_src/: stores.ts
frontend/src/: App.svelte  functions.ts  stores.ts
frontend/src/components/: Footer.svelte  Header.svelte
frontend/src/components/elements/: SearchBar.svelte
frontend/src/lib/: ipc.ts
frontend/src/routes/: index.svelte
frontend/src/routes/commands/: index.svelte
frontend/src/routes/settings/: index.svelte
